--- a/.env
+++ b/.env
@@ -18,9 +18,18 @@ PORT=8080
 HOST=0.0.0.0
 ENVIRONMENT=development
 
-# File Upload
+# File Upload & Storage (NEW)
 UPLOAD_DIR=uploads/
 MAX_FILE_SIZE=10485760
+STORAGE_PROVIDER=local
+# For local development use: local
+# For production with S3 use: s3
+
+# AWS S3 Configuration (for production)
+AWS_ACCESS_KEY_ID=your_aws_access_key
+AWS_SECRET_ACCESS_KEY=your_aws_secret_key
+AWS_S3_BUCKET_NAME=your_s3_bucket_name
+AWS_S3_REGION=us-east-1
 
 # Rate Limiting
 RATE_LIMIT_PER_MINUTE=60
